[package]
name = "bECS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.7.0"
rand = "0.8.5"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image", "mixer", "ttf", "gfx"]


#[profile.release]
#debug = true